--- a/signin.html
+++ b/signin.html
@@ -4,6 +4,64 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>sign in</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Orbit&display=swap" rel="stylesheet">
+
+    <style>
+        input[type="text"],[type="password"] {
+            margin-bottom: 10px;
+            border-style: solid;
+            border-radius: 999px;
+            height: 20px;
+            width: 150px;
+            border-color: darkgreen;
+            transition: width 0s, height 0s, border-color 0s, background-color 0s;
+        }
+        
+        input[type="text"]:focus,[type="password"]:focus {
+            width: 200px;
+            height: 30px;
+            border-color: red;
+            background-color: lightgreen;
+        }
+
+        input[type="submit"][value="로그인"] {
+            border-style: solid;
+            border-color: darkgreen;
+            background-color: darkgreen;
+            width: 110px;
+            height: 35px;
+            border-radius: 999px;
+            color: white;
+        }
+
+        input[type="reset"][value="초기화"] {
+            border-style: solid;
+            border-color: darkgreen;
+            background-color: white;
+            width: 110px;
+            height: 35px;
+            border-radius: 999px;
+            color: darkgreen;
+        }
+
+        input[type="reset"][value="초기화"]:hover {
+            border-style: solid;
+            border-color: darkgreen;
+            background-color: white;
+            width: 110px;
+            height: 35px;
+            border-radius: 999px;
+            color: darkgreen;
+        }
+
+        body {
+            font-family: "Orbit", sans-serif;
+        }
+
+    </style>
 </head>
 <body>
     
