--- a/index.html
+++ b/index.html
@@ -9,25 +9,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Orbit&display=swap" rel="stylesheet">
-
-<style>
-    ul.nav {
-        list-style: none;
-        text-align: center;
-        border-top: 1px solid red;
-        padding: 10px, 0;
-    }
-
-    ul.nav li {
-        display: inline;
-        text-transform: uppercase;
-        padding: 0 10px;
-        letter-spacing: 10px;
-    }
-
-
-</style>
 </head>
+
+
 
 
 <body>
@@ -62,15 +46,20 @@
 
    <aside id="right">
     <h4>광고</h4>
-        <p>오늘 수확한 과일을</p>
-        <p>바로 식탁에서</p>
+        <p>땅에서 식탁까지, 신선함 그대로!</p>
+        <p>가장 가까운 농장에서 바로</p>
+        <p>당신의 집으로!</p>
         <img src="image/salad1.jpg" width="70%">
         <img src="image/farm.jpg" width="70%">
+        <p>오늘 수확한 신선한</p>
+        <p>야채와 채소를 매일 바로</p>
+        <p>배달해 드립니다.</p>
     </aside>
 
     <footer id="bottom">
      <ul>
-        <li><a href="#">공지사황</a></li>
+        <li>ABOUT</li>
+        <li><a href="#">공지사항</a></li>
         <li><a href="#">개인정보처리방침</a></li>
         <li><a href="#">인재채용</a></li>
         <li><a href="#">저작권방침</a></li>
