--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         <li><a href="#">Home</a></li>
         <li><a href="#">News</a></li>
         <li><a href="#">My Cart</a></li>
-        <li><a href="signin.html" target="_blank">Sign in</a></li>
-        <li><a href="#">Sign up</a></li>
+        <li><a href="signin.html" target="iframe1">Sign in</a></li>
+        <li><a href="signout.html" target="iframe1">Sign out</a></li>
     </ul>
 
    <aside id="left">
