--- a/signin.html
+++ b/signin.html
@@ -23,7 +23,7 @@
         input[type="text"]:focus,[type="password"]:focus {
             width: 200px;
             height: 30px;
-            border-color: red;
+            border-color: darkgreen;
             background-color: lightgreen;
         }
 
@@ -66,7 +66,7 @@
 <body>
     
     <aside>
-    <h4>Log in</h4>
+    <h2>Log in</h2>
     <form action="#" method="get">
     아이디
     <input type="text">
